exports[`client > reducers > organization should handle add organization 1`] = `
Object {
  "currentOrganization": null,
  "organizations": Array [
    Object {
      "id": 1,
    },
  ],
  "organizationsById": Object {
    "1": Object {
      "id": 1,
    },
  },
}
`;

exports[`client > reducers > organization should handle default state 1`] = `
Object {
  "currentOrganization": null,
  "organizations": Array [],
  "organizationsById": Object {},
}
`;

exports[`client > reducers > organization should handle set organizations 1`] = `
Object {
  "currentOrganization": null,
  "organizations": Array [
    Array [
      Object {
        "id": 1,
      },
    ],
  ],
  "organizationsById": Object {
    "1": Object {
      "id": 1,
    },
  },
}
`;
